--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,30 @@
 *.dll
 *.so
 *.dylib
+main
 
 # Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Backup files
+*.bkp
+*.go.bkp
+
+# environment file
+.env
+env.json
+
+# node dependencies
+node_modules/
+
+# golang dependencies
+vendor/
+
+# log files
+*.log
+
+# todos
+TODO
